2007-11-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/simple.pm,
   lib/Mail/DKIM/Canonicalization/Base.pm,
   lib/Mail/DKIM/MessageParser.pm: speedup optimizations contributed
   by Mark Martinec.

2007-10-30: Jason Long <jlong@messiah.edu>
 * t/corpus/good_rfc4871_3.txt: to test extra tags in signature
 * scripts/dkimsign.pl: allow user to specify arbitrary extra tags for
   putting in the signature
 * lib/Mail/DKIM/MessageParser.pm: make "not implemented" messages
   more helpful
 * t/corpus/badkey_10.txt: to test key with t=s
 * lib/Mail/DKIM/Verifier.pm: allow check_granularity() to return different
   detail messages; describe two additional result_detail possibilities
 * lib/Mail/DKIM/PublicKey.pm (check_granularity): check for empty g= value;
   check for subdomain usage;
   (subdomain_flag): helper method to look for "s" in flags
   (flags): return default value if no t= tag

2007-10-26: Jason Long <jlong@messiah.edu>
 * t/corpus/badkey_9.txt: to test empty g= in selector
 * t/corpus/ignore_8.txt: to test bad i= value in signature
 * lib/Mail/DKIM/Verifier.pm: check signature identity value

2007-10-24: Jason Long <jlong@messiah.edu>
 * t/corpus/badkey_8.txt, ignore_5.txt, ignore_6.txt: fix signature so
   it would verify if not for the flaw in the public key
 * scripts/dkimsign.pl: allow key protocol to be specified on command
   line
 * lib/Mail/DKIM/Verifier.pm: update documentation on possible error
   codes
 * lib/Mail/DKIM/PublicKey.pm: cleanup error code

2007-10-24: Jason Long <jlong@messiah.edu>
 * t/corpus/badkey_*.txt: changed subjects to indicate which test it is
 * t/corpus/badkey_7.txt, badkey_8.txt, goodkey_1.txt, goodkey_2.txt,
   goodkey_3.txt: additional tests of public key features
 * t/corpus/verifier.t: test the new test messages
 * lib/Mail/DKIM/Verifier.pm (check_public_key): check key granularity
   and report the problem if it doesn't match