@@ -18,7 +18,7 @@ sub init
 	my $self = shift;
 	$self->SUPER::init;
 
-	$self->{canonicalize_body_buf} = "";
+	$self->{canonicalize_body_empty_lines} = 0;
 }
 
 sub canonicalize_header
@@ -33,7 +33,7 @@ sub canonicalize_header
 sub canonicalize_body
 {
 	my $self = shift;
-	my ($line) = @_;
+	# my ($line) = @_;  # optimized away for speed
 
 	# ignore empty lines at the end of the message body
 
@@ -41,18 +41,17 @@ sub canonicalize_body
 	# (i.e. do not emit empty lines until a following nonempty line
 	# is found)
 	#
-	if ($line eq "\015\012")
+	if ($_[0] eq "\015\012")
 	{
-		$self->{canonicalize_body_buf} .= $line;
-		$line = "";
+		$self->{canonicalize_body_empty_lines}++;
+		return "";
 	}
 	else
 	{
-		$line = $self->{canonicalize_body_buf} . $line;
-		$self->{canonicalize_body_buf} = "";
+		my $n = $self->{canonicalize_body_empty_lines};
+		$self->{canonicalize_body_empty_lines} = 0;
+		return $n <= 0 ? $_[0] : ("\015\012" x $n) . $_[0];
 	}
-
-	return $line;
 }
 
 1;
